add sass, tailwind, begin nav, hero section

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import "shared/nav";
+@import "shared/variables";
+@import "shared/hero";
+
 html,
 body {
   padding: 0;
