--- a/styles/shared/layout.scss
+++ b/styles/shared/layout.scss
@@ -2,16 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "shared/nav";
-@import "shared/variables";
-@import "shared/hero";
-
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Roboto,sans-serif;
+  font-size: 10px;
+}
+
+p, a, ul, li, i {
+  font-size: 1.6rem;
+  font-weight: 300;
 }
 
 a {
