--- a/styles/shared/nav.scss
+++ b/styles/shared/nav.scss
@@ -4,15 +4,15 @@
   &__link {
     color: #ffffffcc;
     font-family: 'Roboto', sans-serif;
-    padding: 0 2rem;
-  }
-
-  &__logo {
-    
+    padding: 0 3rem;
+    font-size: 1.6rem;
+    letter-spacing: .2px;
+    font-weight: 400;
   }
 
   &__logo-wrap {
     width: 80px;
+    margin-right: 3rem;
   }
 
 }
