wire up buy now button

--- a/styles/application.scss
+++ b/styles/application.scss
@@ -1,6 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import "shared/variables";
 @import "shared/layout";
 @import "shared/nav";
 @import "shared/utils";
 @import "components/buttons";
 @import "components/hero";
+@import "components/overrides";
