--- a/styles/shared/nav.scss
+++ b/styles/shared/nav.scss
@@ -8,6 +8,11 @@
     font-size: 1.6rem;
     letter-spacing: .2px;
     font-weight: 400;
+
+    &:hover {
+      color: #fff;
+    }
+
   }
 
   &__logo-wrap {
