--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -6,9 +6,9 @@
   font-weight: 500;
   text-align: center;
   white-space: nowrap;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.8px;
   display: inline-block;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out, box-shadow 420ms cubic-bezier(.165,.84,.44,1);
   position: relative;
   overflow: hidden;
   border-radius: 2px;
@@ -34,10 +34,15 @@
     background-color: $color-blue;
   }
 
-}
+  &--transparent {
+    background-color: transparent;
+    color: #fff;
+    border: 2px solid #fff;
 
-.buy-button-wrap {
-  max-width: 123px;
-  border-radius: 4px;
-  overflow: hidden;
+    &:hover {
+      background: transparent;
+      box-shadow: inset 0 0 0 2px #fff;
+    }
+  }
+
 }
