--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -1,8 +1,8 @@
 .btn {
   border-radius: 2px;
   background-color: $color-gold;
-  font-size: 1.8rem;
-  padding: 1rem 3.5rem;
+  font-size: 18px;
+  padding: 10px 35px;
   font-weight: 500;
   text-align: center;
   white-space: nowrap;
@@ -21,8 +21,8 @@
 
   &--round {
     border-radius: 11px;
-    padding: .5rem 3rem;
-    font-size: 1.6rem;
+    padding: 5px 30px;
+    font-size: 18px;
 
     &:hover {
       background-color: #2d5fdf;
