--- a/styles/application.scss
+++ b/styles/application.scss
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply text-6xl;
+  }
+  h2 {
+    @apply text-4xl;
+  }
+  h3 {
+    @apply text-3xl;
+  }
+  h4 {
+    @apply text-2xl tracking-wide;
+  }
+  p {
+    @apply text-lg;
+  }
+  section {
+    @apply py-32;
+  }
+}
+
+// @layer components {
+//   .btn-blue {
+//     @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+//   }
+// }
+
+// @layer utilities {
+//   .filter-none {
+//     filter: none;
+//   }
+//   .filter-grayscale {
+//     filter: grayscale(100%);
+//   }
+// }
+
 @import "shared/variables";
 @import "shared/layout";
 @import "shared/nav";
