--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -6,7 +6,7 @@
   font-weight: 500;
   text-align: center;
   white-space: nowrap;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.5px;
   display: inline-block;
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out, box-shadow 420ms cubic-bezier(.165,.84,.44,1);
   position: relative;
@@ -32,6 +32,7 @@
 
   &--blue {
     background-color: $color-blue;
+    font-weight: 400;
   }
 
   &--transparent {
