--- a/styles/shared/nav.scss
+++ b/styles/shared/nav.scss
@@ -2,13 +2,19 @@
 
   &__logo-wrap {
     width: 80px;
-    margin-right: 3rem;
+    display: block;
 
     &--scrolled {
       width: 65px;
       @apply transition-all;
     }
 
+  }
+
+  &__logo-wrap-fixed-width {
+    width: 80px;
+    height: 100%;
+    margin-right: 3rem;
   }
 
 }
