--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -1,7 +1,7 @@
 .btn {
   border-radius: 2px;
   background-color: $color-gold;
-  font-size: 18px;
+  font-size: 15px;
   padding: 10px 35px;
   font-weight: 500;
   text-align: center;
@@ -17,6 +17,12 @@
 
   &:hover {
     background-color: #a58958;
+  }
+
+  &-lg {
+    font-size: 20px;
+    padding: 16px 40px;
+    letter-spacing: .8px;
   }
 
   &--round {
