--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -20,9 +20,14 @@
   }
 
   &-lg {
-    font-size: 20px;
-    padding: 16px 40px;
+    font-size: 17px;
+    padding: 14px 30px;
     letter-spacing: .8px;
+
+    @media (min-width: 1024px) {
+      font-size: 20px;
+      padding: 16px 40px;
+    }
   }
 
   &--round {
