--- a/styles/components/buttons.scss
+++ b/styles/components/buttons.scss
@@ -53,7 +53,8 @@
     border-color: color-black;
 
     &:hover {
-      background-color: $color-black;
+      // background-color: $color-black;
+      box-shadow: inset 0 0 0 2px $color-black;
     }
 
     &-outline {
@@ -70,9 +71,25 @@
 
   }
 
+  &--gold-outline {
+    background-color: transparent;
+    border-color: $color-gold;
+    color: $color-gold;
+
+    &:hover {
+      background-color: $color-gold;
+      color: #fff;
+    }
+
+  }
+
   &--blue {
     background-color: $color-blue;
     font-weight: 400;
+
+    &:hover {
+      background-color: #2d5fdf;
+    }
   }
 
   &--transparent {
