--- a/styles/application.scss
+++ b/styles/application.scss
@@ -6,12 +6,12 @@
 @import "components/overrides";
 @import "components/tabs";
 
-//tailwind
+//tailwind css
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-//tailwind custom config 
+//tailwind customizations 
 @layer base {
   h1, h2, h3, h4 {
     @apply font-medium;
@@ -40,21 +40,7 @@
   }
 }
 
-// @layer components {
-//   .btn-blue {
-//     @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
-//   }
-// }
-
-// @layer utilities {
-//   .filter-none {
-//     filter: none;
-//   }
-//   .filter-grayscale {
-//     filter: grayscale(100%);
-//   }
-// }
-
+//layout/global
 html,
 body {
   padding: 0;
