--- a/styles/components/overrides.scss
+++ b/styles/components/overrides.scss
@@ -16,3 +16,30 @@ iframe[name="frame-product-9270065358"] {
   overflow: hidden;
   display: inline-block;
 }
+
+.hamburger-icon {
+  display: block;
+  width: 25px;
+  height: 2px;
+  background-color: white;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger-icon::before,
+.hamburger-icon::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 2px;
+  background-color: white;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger-icon::before {
+  transform: translateY(-8px);
+}
+
+.hamburger-icon::after {
+  transform: translateY(8px);
+}
